@@ -2,6 +2,7 @@ March 2022 7.9
   - Docker: upgrade OS to Debian Bullseye
   - LAM Pro:
    -> support multiple TO addresses for license expiration email
+   -> Custom scripts: $INFO.debug$ wildcard prints all possible wildcards and their values
   - Fixed bugs:
    -> Tree view: check session expiration
 
